[build-system]
requires = [
    "setuptools >= 46.4.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "py-audioop"
version = "1.0.0"
description = "An LTS port of the Python `audioop` module."
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/AbstractUmbra/audioop"
